@@ -21,9 +21,9 @@ SET(OPENJPEG_SRCS
   tgt.c
   opj_convert.c
 )
-
-INCLUDE_DIRECTORIES( ${LCMS_INCLUDE_DIR} )
-
+IF(LCMS_INCLUDE_DIR)
+  INCLUDE_DIRECTORIES( ${LCMS_INCLUDE_DIR} )
+ENDIF(LCMS_INCLUDE_DIR)
 # Pass proper definition to preprocessor to generate shared lib
 IF(WIN32)
   IF(BUILD_SHARED_LIBS)
@@ -37,7 +37,9 @@ ENDIF(WIN32)
 ADD_LIBRARY(${OPENJPEG_LIBRARY_NAME} ${OPENJPEG_SRCS})
 SET_TARGET_PROPERTIES(${OPENJPEG_LIBRARY_NAME} PROPERTIES
 	${OPENJPEG_LIBRARY_PROPERTIES})
-
+IF(LCMS_LIB)
+  TARGET_LINK_LIBRARIES(${OPENJPEG_LIBRARY_NAME} ${LCMS_LIB})
+ENDIF(LCMS_LIB)
 # Install library
 INSTALL(TARGETS ${OPENJPEG_LIBRARY_NAME}
   EXPORT OpenJPEGTargets
